--- a/Contrato Eletronico Mesmera/views/assinarcontratos.html
+++ b/Contrato Eletronico Mesmera/views/assinarcontratos.html
@@ -8,19 +8,19 @@
         <img class="titulocontratoeventogram" src="styles/images/eventogram_icon.png">
         <img class="titulocontratophotogramma" src="styles/images/photogramma_icon.png">
         <img class="titulocontratoinky" src="styles/images/inky.png">
-	    <button class="dl-trigger  dl-trigger_antes"></button> <span id="bypassme" class="titulo_contrato">Contrato Mesmera Comunicação</span> 
+	    <button class="dl-trigger  dl-trigger_antes"></button> <span id="bypassme" class="titulo_contrato">Assinar contratos </span> 
 	    <ul id="dlmenuopen" class="dl-menu">
 		   <li><span onclick="contrato_eventogram()"><img src="styles/images/eventogram_icon.png"><div>EVENTOGRAM</div></span></li>
            <li><span onclick="contrato_photogramma()"><img src="styles/images/photogramma_icon.png"><div>PHOTOGRAMMA</div></span></li>
            <li><span onclick="contrato_inky()"><img src="styles/images/inky.png"><div>INKY</div></span></li>
 	   </ul>
      </header>
-    
+   
      <div style="color:#fff!important">.</div>
-    <h3 class="titulocontrato">CONTRATO DE PRESTAÇÃO DE SERVIÇO MESMERA COMUNICAÇÃO DIGITAL<div class="produtocontrato">EVENTOGRAM</div></h3>
+    <h3 class="titulocontrato">CONTRATO DE ADESÃO <br> MESMERA COMUNICAÇÃO DIGITAL<div class="produtocontrato">- EVENTOGRAM -</div></h3>
     <div>.</div> 
     <p class="texto_contrato">
-       Pelo presente instrumento particular de compromisso de prestação de serviço, que entre se fazem: de um lado, como PRESTADOR DE SERVIÇO: Mesmera Comunicação Digital localizada no Edifício Athenas Max Center, á  Av. Coronel Prates No 348, 12º andar, CEP: 39400 -104 registrada sob o CNPJ:20.484.941/0001-55, de propriedade do Sr. Marcel Bomfim Da Silva Fernandes, brasileiro, publicitário, portador da cédula de identidade RG no  MG-12.217.453  e do CPF/MF no 064.070.346-12; solteiro, residente e domiciliados à rua Antonio Rodrigues Nº411, bairro: São José, Montes Claros - MG, CEP: 39400 -349, UF: MG), doravante denominado simplesmente PRESTADOR DE SERVIÇO; e de outro lado, como CONTRATANTE: 
+       Pelo presente instrumento particular de compromisso de prestação de serviço, que entre se fazem: de um lado, como PRESTADOR DE SERVIÇO: Mesmera Comunicação Digital com sede localizada no Edifício Athenas Max Center, á  Av. Coronel Prates No 348, centro, 12º andar, CEP: 39400 -104, Montes Claros - MG e filial localizada á Rua Guajajaras No 1172, Lourdes, Belo Horizonte - MG, Cep 30180-100, registrada sob o CNPJ:20.484.941/0001-55, doravante denominado simplesmente PRESTADOR DE SERVIÇO; e de outro lado, como CONTRATANTE: 
     </p>
     <p></p>
     <br><br>
@@ -33,12 +33,12 @@
    
       <ul data-role="listview" data-style="inset" class="contratantes_inputs">
             <li>
-                 <label>NOME DO REPRESENTANTE:&nbsp
+                 <label>REPRESENTANTE:&nbsp
                     <input class="nome_contratante" type="text" value="" />
                 </label>  
             </li>
             <li>
-                 <label>NOME DA INSTITUIÇÃO:&nbsp
+                 <label>INSTITUIÇÃO:&nbsp
                     <input class="nome_instituicao" type="text" value="" />
                 </label>  
             </li>
@@ -198,7 +198,7 @@
                      <li><span> - 1 profissional capacitado para exercer função de manutenção e distribuição das fotos.</span></li>
                      <li><span> - Transporte.</span></li>
                      <li><span> - 20 plaquinhas divertidas (por dia de evento)</span></li>
-                     <li><span> - 1 monopod a regime de comodato somento durante o evento.</span></li>     
+                     <li><span> - 1 monopod a regime de comodato somente durante o evento.</span></li>     
                  </ul>
   
                </div>
@@ -210,7 +210,7 @@
              <p class="texto_contrato">O presente contrato de prestação de serviço, visa a utilização dos mesmos, bom para a seguinte data/período:</p>
                  <ul>
                     <li class="adddata"><span> - Dia:</span><span class="dia_prazoseperiodo"></span></li>
-                    <li><span> - Por um período máximo de até 8h corridas ou até 700 fotos</span></li>
+                    <li><span> - Por um período máximo até 8h corridas <span class="eventogram700">e ou até 700 fotos</span>. Em eventos de início noturno, os serviços serão encerrados as 5h da manhã.</span></li>
                  </ul>
             
         <br>
@@ -256,33 +256,41 @@
         
                  <br>
              <h3>IV - DOS PRÉ-REQUISITOS:</h3>
-             <p class="texto_contrato">Os seguintes pré-requisitos são de responsabilidade do cliente e devem ser disponibilizados antes do início da prestação de serviço. O não cumprimento de qualquer um dos itens listados abaixo poderão comprometer a prestação de serviço e, neste caso, será objeto de reavaliação e de eventualmente nova negociação:</p>
+             <p class="texto_contrato">Os seguintes pré-requisitos são de responsabilidade do cliente e devem ser disponibilizados antes do início da prestação de serviço. O não cumprimento de qualquer um dos itens listados abaixo poderão comprometer a prestação de serviço e, neste caso, será objeto de reavaliação e de eventualmente nova negociação (cobrança de multa, 15% do valor do contrato) e ou até mesmo rescisão de contrato:</p>
                   <p><ul style="margin-right:1rem;">
-                     <li><span> - A concordância formal por parte do cliente da proposta.</span></li>
+                     <li><span> - A concordância formal por parte do cliente da proposta (aceite do contrato), assinatura do contrato com até 5 dias úteis antes do evento.</span></li>
                      <li><span> - Pagamento imediato da entrada do valor acordado entre as partes, emissão de cheque ou nota promissória datada para faturar em até 5 dias úteis antes do evento.</span></li>
-                     <li><span> - Ambiente deve ter sinal de celular (3g/2g) das principais operadoras do mercado.</span></li>
-                     <li><span> - Energia elétrica próxima aonde será instalada a aparelhagem a ser utilizada. (120 volts).</span></li>
+                     <li><span> - Ambiente deve ter wifi ou sinal de celular (3g/2g) das principais operadoras do mercado, caso a contratação exija compartilhamento de fotos pela web.</span></li>
+                     <li><span> - Energia elétrica "contínua" de 120 volts próximo aonde será instalada a aparelhagem a ser utilizada (Máximo 10m de distância do local de instalação).</span></li>
                      <li><span> - Constituição e disponibilização do(s) representante(s) do cliente, com plenos poderes para acompanhamento do serviço prestado.</span></li>
-                     <li><span> - Caso o serviço for prestado fora do município de Montes Claros - MG, o valor do transporte será negociado.</span></li>
-                     <li><span> - Fornecimento de dados essênciais para o funcionamento do serviço com até 5 dias úteis de antecedencia. (hashtag, logomarca, nome do evento).</span></li>
-                     <li><span> - Definição e inserção do serviço no layout (mapa) da decoração do evento. Deverá ser informado com até 5 dias úteis de antecedência.</span></li>     
-                 </ul></p>
+                     <li><span> - Fornecimento de dados essênciais para o funcionamento do serviço com até 2 dias úteis de antecedencia. (hashtag, logomarca, aprovação da moldura e do backdrop, nome do evento, local exato de instalação).</span></li>
+                     <li><span> - Definição e inserção do serviço no layout (mapa) da decoração do evento respeitando as medidas necessárias informadas na planta baixa enviada por e-mail pelo contratado. Por obrigatoriedade deverá ser informado com até 2 dias úteis de antecedência (Sujeito a multa de 15% do valor acordado neste contrato).</span></li>     
+                     <li><span> - O contratante deverá disponibilizar acesso ao local e espaço definido para instalação do serviço com no máximo 12 horas de antecedencia do início do evento (Multa 15% do valor do contrato).</span></li>
+                     <li><span> - O contratante deverá disponibilizar um local limpo, totalmente coberto, protegido de chuva e ou sol forte, chão totalmente seco, não poderá ser gramado, terreno, ou conter terra e poeira, deverá ficar no mínimo a uma distância de 5 metros de onde possívelmente passarará água ou haver poeira e terra.(Sujeito a rescisão)</span></li>
+                     <li><span> - O local de atuação deverá ser totalmente visível e acessível pelos convidados do evento, não podendo haver obstáculos no entorno da tenda, caso houver, deverá ter distância mínima de 5 metros, o espaço deverá ser exclusivo para atuação do serviço, não podendo ser dividido com terceiros incluindo fornecedores do evento, portanto não poderá ser montado em corredores, em frente a portas, palcos e locais de acesso (Sujeito a multa de 15% do valor do contrato e a depender da situação, rescisão). </span></li>
+                     <li><span> - Para que a projeção do letreiro da tenda e a iluminação da mesma seja percebida de maneira correta, o contratante deverá disponibilizar ambiente desprovido de iluminação e ou no máximo luz baixa, 40% de iluminação no ambiente (Sujeito a multa de 15% do valor acordado neste contrato).</span></li>
+                      
+                  </ul></p>
        
               <br>
         
         <div>.</div>
              <h3>V - PREMISSAS:</h3>
                  <p><ul style="margin-right:1rem;">
-                     <li><span> - Esta proposta não contempla distribuição,  impressão ou elaboração de material que não sejam fotos tiradas por nossos equipamentos ou em conjunto com nossos equipamentos no evento.</span></li>
-                     <li><span> - Em caso de cancelamento, o valor de 100% não será restituído, será faturado pelo contratado a título de multa.</span></li>
-                     <li><span> - Em caso de eventuais atrasos ou qualquer problema relacionado a pagamento, o serviço será suspenso.</span></li>
-                     <li><span> - O não cumprimento de qualquer um dos pré-requisitos, poderá comprometer os prazos,performance, cronograma, serviço e/ou preços, sendo necessária a revisão desta proposta e nova negociação;</span></li>
-                     <li><span> - Fica o locador inteiramente responsável por todos os itens locados descrito no presente contrato, devendo arcar com qualquer dano ou prejuízo causado aos mesmos durante a prestação de serviço.</span></li>
+                     <li><span> - Esta proposta não contempla distribuição, impressão ou elaboração de material que não sejam fotos tiradas por nossos equipamentos ou em conjunto com nossos equipamentos no evento.</span></li>
+                     <li><span> - Caso, independente do motivo haja queda ou variação da energia elétrica, o serviço será suspenso ou á depender do caso, encerrado permanentemente, caso haja prejuízos, serão repassados aos contratantes.(Multa 15% do contrato, caso tenhamos que remontar ou reconfigurar os equipamentos do serviço novamente) </span></li>
+                     <li><span> - Em caso de cancelamento ou recisão, o valor de 100% não será restituído, será faturado pelo contratado a título de multa.</span></li>
+                     <li><span> - Em caso de eventuais atrasos ou qualquer problema relacionado a pagamento, o serviço será suspenso, rescindido e será cobrado o restante dos 100% do valor contratado a título indenizatório.</span></li>
+                     <li><span> - Uma vez montado e ou instalado todo o equipamento do serviço em espaço e ou local pré-definido pelo contratante, não poderá ser feito, mudanças, nova montagem, desinstalação e instalação em novo local. O serviço permanecerá no local onde foi aprovado com 2 dias de antecedencia do evento.( Caso a instalação de serviço mude de local dentro das premissas abordadas neste, haverá cobrança de 15% de multa sobre o valor deste contrato).</span></li>
+                     <li><span> - Fica o locador inteiramente responsável por todos os itens locados descrito no presente contrato, devendo arcar com qualquer dano ou prejuízo causado aos mesmos equanto permanecerem no local do evento .</span></li>
                      <li><span> - O prestador de serviço citado nesta não assume responsabilidade referente a eventuais problemas relacionados ao fornecimento de sinal de internet móvel (3G- 4G) ou Wifi.</span></li>
-                     <li><span> - Mesmo dispondo de sistema rigoroso de filtragem de fotos, o contratado não assume responsabilidade referente a eventuais problemas relacionados a exibição de imagens de conteúdo impróprio em telão e em totem postado por terceiros no evento (Mau compartamento dos convidados e ou terceiros).</span></li>
-                     <li><span> - O prestador de serviço citado nesta poderá desligar o telão e ou suspender (encerrar) os serviços, sem resarcimento de qualquer valor acordado neste, caso o mesmo for utilizado indevidamente por convidados do evento e ou terceiros ( Casos envolvendo falta de segurança no evento (violência) e eventual mal uso do serviço;</span></li>
-                     <li><span> - Fica o contratante responsável pela segurança e por qualquer eventual dano, furto e ou roubo causado por terceiros referente a equipamentos desta empresa prestadora de serviços, enquanto a mesma estiver com todos os equipamentos instalados no local do evento, independente do período. (O contratante ficará isento de responsabilidade apenas quando haver dano causado por irresponsabilidade do contratado.)  O contratante deverá arcar com todos os prejuizos e danos causados por terceiros caso haja algum.</span></li>
-                    </ul>
+                     <li><span> - Mesmo dispondo de sistema rigoroso de filtragem de fotos, o contratado não assume responsabilidade referente a eventuais problemas relacionados a exibição de imagens de conteúdo impróprio em telão e em totem postado por terceiros no evento (Mau comportamento dos convidados e ou terceiros).</span></li>
+                     <li><span> - O prestador de serviço citado nesta poderá desligar o telão e ou totem e ou suspender (encerrar) os serviços, sem resarcimento de qualquer valor acordado neste, caso o mesmo for utilizado indevidamente por convidados do evento e ou terceiros ( Casos envolvendo falta de segurança no evento (violência), falta de respeito ás regras e eventual mal uso do serviço;</span></li>
+                     <li><span> - Fica o contratante responsável pela segurança e por qualquer eventual dano, furto, roubo e ou desrespeito ás regras e clausulas deste contrato causado por terceiros referente a equipamentos desta empresa prestadora de serviços, enquanto a mesma estiver com todos os equipamentos instalados no local do evento, independente do período. (O contratante ficará isento de responsabilidade apenas quando haver dano causado pelo próprio contratado.)  O contratante deverá arcar com todos os prejuizos e danos causados por terceiros caso haja algum.</span></li>
+                     <li><span> - São permitidos no máximo 4 pessoas por sessão de fotos. </span></li>
+                     <li><span> - Não é permitido a entrada com bebidas, liquidos e alimentos de qualquer natureza. </span></li>
+                     
+                 </ul>
                 <br><div>.</div>
                      
              <h3>VI - DAS  DISPOSIÇÕES GERAIS:</h3>
@@ -303,7 +311,7 @@
  <div data-role="modalview" id="modalview-login" style="width: 90%;" data-use-native-scrolling="true">
     <div data-role="header">
         <div data-role="navbar">
-            <span>ASSINAR DOCUMENTO</span>
+            <span>ASSINAR:</span>
             <a data-click="closeModalViewLogin" data-role="button" data-align="right">Cancelar</a>
         </div>
     </div>
@@ -510,8 +518,8 @@ $(document).ready(function(){$(".txt").each(function(){$(this).keyup(function(){
         $('.produtocontrato').html('');
         $('.produtocontrato').append('- EVENTOGRAM -');
         $('.doobjetodocontrato').html('');
-        $('.doobjetodocontrato').append('<ul class="eventogram_info"><li><span>Telão de projeção traseira de policarbonato no formato 1520x2700x3,0mm e projetor Epson w12+ (Projeção Mapeada), treliça Gol A20, notebook samsung core i5 8gb de memoria ram.</span></li><li><span>Quiosque com software de exibição, impressão e gerenciamento de fotos (impressora de fotografia Olmec op1000 ou Sony updr200, 1 tv de 32 polegadas lg, 1 monitor touchscreen 15 pol Bematech, 1 pc core i5 + 4gb de memoria + hd ssd 64gb + wifi usb multilaser, 1 no break, 2 modems com rotemento wifi 2G/3G claro.</span></li><li><span>Selfie Machine (Totem, Tablet samsung Galaxy Tab 4 modelo: SM-T230NT)</span></li><li><span>Sistema rigoroso de filtragem de fotos exibidas no telão gerenciado pelo app do eventogram.</span></li><li><span>1 profissional capacitado para exercer função de manutenção e distribuição das fotos.</span></li><li><span>Transporte.</span></li><li><span>20 plaquinhas divertidas (por dia de evento)</span></li><li><span>1 monopod a regime de comodato somento durante o evento.</span></li></ul>');
-        
+        $('.doobjetodocontrato').append('<ul class="eventogram_info"><li><span>Telão de projeção traseira de policarbonato no formato 1520x2700x3,0mm e projetor Epson w12+ (Projeção Mapeada), treliça Gol A20, notebook samsung core i5 8gb de memoria ram.</span></li><li><span>Quiosque com software de exibição, impressão e gerenciamento de fotos (impressora de fotografia Olmec op1000 ou Sony updr200, 1 tv de 32 polegadas lg, 1 monitor touchscreen 15 pol Bematech, 1 pc core i5 + 4gb de memoria + hd ssd 64gb + wifi usb multilaser, 1 no break, 2 modems com rotemento wifi 2G/3G claro.</span></li><li><span>Selfie Machine (Totem, Tablet samsung Galaxy Tab 4 modelo: SM-T230NT)</span></li><li><span>Sistema rigoroso de filtragem de fotos exibidas no telão gerenciado pelo app do eventogram.</span></li><li><span>1 profissional capacitado para exercer função de manutenção e distribuição das fotos.</span></li><li><span>Um projetor Epson w12+, um notebook core i5, 8gb de memória ram, hd ssd 1gb, cabos hdmi e energia, tripé.</span></li><li><span>Um display (Porta retratos digital branco).</span></li><li><span>20 plaquinhas divertidas (por dia de evento)</span></li><li><span>1 monopod a regime de comodato somente durante o evento.</span></li></ul>');
+        $('.eventogram700').html('<span> e ou até 700 fotos</span>');
         
            setTimeout(function() {
          $('.titulocontratoeventogram').css('opacity','0');
@@ -530,7 +538,7 @@ $(document).ready(function(){$(".txt").each(function(){$(this).keyup(function(){
         $('.produtocontrato').append('- PHOTOGRAMMA -');
         $('.doobjetodocontrato').html('');
         $('.doobjetodocontrato').append('<ul class="photogramma_info"><li><span>Tenda inflável 2,5 x 2,5 x 2,5</span></li><li><span>Totem de fotografia com revelação de fotos na hora (impressora de fotografia Olmec op1000 ou Sony updr200, monitor touch 19 AOC, PC com 4gb de memoria + hd ssd 64gb + Processador Core i5 + Máquina fotográfica Mark II 5d + Lente canon 50mm, Cabos hdmi 10m, 1 no-break, 1 sombrinha difusora com tripé).</span></li><li><span>Totem de exibição de fotos animadas (2 Smart-tvs led 48 polegadas e uma treliça a20)</span></li><li><span>1 profissional capacitado para exercer função de manutenção e distribuição das fotos.</span></li><li><span>Transporte.</span></li><li><span>Adereços divertidos para bater fotos</span></li></ul>');
-    
+        $('.eventogram700').html('');
         setTimeout(function() {
         $('.titulocontratophotogramma').css('opacity','0');
         $('.km-content').css('opacity', '1');
