--- a/Contrato Eletronico Mesmera/views/home.html
+++ b/Contrato Eletronico Mesmera/views/home.html
@@ -1,4 +1,4 @@
-<div data-role="view" data-title="CONTRATOS MESMERA CO" data-layout="main" data-model="APP.models.home">
+<div data-role="view" data-title="Contratos Assinados" data-layout="main" data-model="APP.models.home">
   
         <header data-role="header">
         <div data-role="navbar">
@@ -111,7 +111,7 @@ directoryReader.readEntries(readerSuccess,fail);
             });
 
         }
-        
+       
             
             function refreshlist() {
         
