--- a/Contrato Eletronico Mesmera/views/assinarcontratos.html
+++ b/Contrato Eletronico Mesmera/views/assinarcontratos.html
@@ -1,5 +1,4 @@
 <div data-role="view" data-use-native-scrolling="true"  data-title="Contrato Mesmera Comunicação" data-layout="main" data-model="APP.models.eventogram" class="gerarpdf">
-    <div class="capa"></div>
     <div class="pagina1"></div>  
     <h10 style="color:#fff!important">.</h10>
 
@@ -17,7 +16,7 @@
      </header>
    
      <div style="color:#fff!important">.</div>
-    <h3 class="titulocontrato">CONTRATO DE ADESÃO <br> MESMERA COMUNICAÇÃO DIGITAL<div class="produtocontrato">- EVENTOGRAM -</div></h3>
+    <h3 class="titulocontrato"><div class="textotitulocontrato">CONTRATO DE ADESÃO </div><div> MESMERA COMUNICAÇÃO DIGITAL</div><div class="produtocontrato">- EVENTOGRAM -</div></h3>
     <div>.</div> 
     <p class="texto_contrato">
        Pelo presente instrumento particular de compromisso de prestação de serviço, que entre se fazem: de um lado, como PRESTADOR DE SERVIÇO: Mesmera Comunicação Digital com sede localizada no Edifício Athenas Max Center, á  Av. Coronel Prates No 348, centro, 12º andar, CEP: 39400 -104, Montes Claros - MG e filial localizada á Rua Guajajaras No 1172, Lourdes, Belo Horizonte - MG, Cep 30180-100, registrada sob o CNPJ:20.484.941/0001-55, doravante denominado simplesmente PRESTADOR DE SERVIÇO; e de outro lado, como CONTRATANTE: 
@@ -107,11 +106,15 @@
           
       </ul>
          <br> 
+     <div>.</div>
+    <div>.</div>
       <p class="texto_contrato">...doravante denominado simplesmente CONTRATANTE, têm entre si, como justos e contratados, o presente instrumento particular, elaborado nos termos da Lei, a ser executado na seguinte data e local:</p>  
          <br>   
         
-          <div>.</div>  
-      <h3>LOCAL DE EXECUÇÃO DO SERVIÇO:</h3>      
+<div>.</div>
+     <br>   
+      <h3 style="width:100%; text-align:center;">LOCAL DE EXECUÇÃO DO SERVIÇO:</h3>
+    <div>.</div>
             
         <ul data-role="listview" data-style="inset" class="contratantes_inputs">
             <li>
@@ -209,7 +212,7 @@
              <h3>II - DO PRAZO E PERIODO DE USO:</h3>
              <p class="texto_contrato">O presente contrato de prestação de serviço, visa a utilização dos mesmos, bom para a seguinte data/período:</p>
                  <ul>
-                    <li class="adddata"><span> - Dia:</span><span class="dia_prazoseperiodo"></span></li>
+                    <li class="adddata"><span> - DIA:</span><span class="dia_prazoseperiodo"></span></li>
                     <li><span> - Por um período máximo até 8h corridas <span class="eventogram700">e ou até 700 fotos</span>. Em eventos de início noturno, os serviços serão encerrados as 5h da manhã.</span></li>
                  </ul>
             
@@ -217,7 +220,7 @@
              <div>.</div>
               <h3>III - ORÇAMENTO:</h3>
            
-                   <ul data-role="listview" data-style="inset" class="contratantes_inputs">
+                   <ul data-role="listview" data-style="inset" class="contratantes_inputs" style="list-style-type:none!important;">
                     <li>
                         <label>PREÇO:&nbsp
                             <input class="preco_orcamento orcamento_change txt" type="number" value="" />
@@ -241,17 +244,23 @@
                             <input class="total_orcamento" id="sum" type="text" value="" />
                         </label>
                    </li>
-                   <li>  
-                        <label><span>FORMA PAG:&nbsp</span>
-                              <select id="dropdown">
+                       
+                   <li>
+                        <label>
+                              
+                            <span>FORMA PAGTO:&nbsp</span>
+                            <select id="dropdown">
                                 <option value="avista">À vista</option>
                                 <option value="entradamaisuma">50%+50%</option>
                                 <option value="cartaoumavez">Cartão 1 vez</option>
                                 <option value="cartaoduasvezes">Cartão 2 vezes</option>
                                 <option value="cartaotresvezes">Cartão 3 vezes</option>
-                            </select>
+                              </select>
+                             <input class="total_orcamento123" id="sum" type="text" value="" style="display:none;" />
                         </label>
                    </li>
+                       
+                   
                    </ul>
         
                  <br>
@@ -265,7 +274,7 @@
                      <li><span> - Constituição e disponibilização do(s) representante(s) do cliente, com plenos poderes para acompanhamento do serviço prestado.</span></li>
                      <li><span> - Fornecimento de dados essênciais para o funcionamento do serviço com até 2 dias úteis de antecedencia. (hashtag, logomarca, aprovação da moldura e do backdrop, nome do evento, local exato de instalação).</span></li>
                      <li><span> - Definição e inserção do serviço no layout (mapa) da decoração do evento respeitando as medidas necessárias informadas na planta baixa enviada por e-mail pelo contratado. Por obrigatoriedade deverá ser informado com até 2 dias úteis de antecedência (Sujeito a multa de 15% do valor acordado neste contrato).</span></li>     
-                     <li><span> - O contratante deverá disponibilizar acesso ao local e espaço definido para instalação do serviço com no máximo 12 horas de antecedencia do início do evento (Multa 15% do valor do contrato).</span></li>
+                     <li><span> - O contratante deverá disponibilizar acesso ao local e espaço definido para instalação do serviço com no mínimo 12 horas de antecedencia do início do evento (Multa 15% do valor do contrato).</span></li>
                      <li><span> - O contratante deverá disponibilizar um local limpo, totalmente coberto, protegido de chuva e ou sol forte, chão totalmente seco, não poderá ser gramado, terreno, ou conter terra e poeira, deverá ficar no mínimo a uma distância de 5 metros de onde possívelmente passarará água ou haver poeira e terra.(Sujeito a rescisão)</span></li>
                      <li><span> - O local de atuação deverá ser totalmente visível e acessível pelos convidados do evento, não podendo haver obstáculos no entorno da tenda, caso houver, deverá ter distância mínima de 5 metros, o espaço deverá ser exclusivo para atuação do serviço, não podendo ser dividido com terceiros incluindo fornecedores do evento, portanto não poderá ser montado em corredores, em frente a portas, palcos e locais de acesso (Sujeito a multa de 15% do valor do contrato e a depender da situação, rescisão). </span></li>
                      <li><span> - Para que a projeção do letreiro da tenda e a iluminação da mesma seja percebida de maneira correta, o contratante deverá disponibilizar ambiente desprovido de iluminação e ou no máximo luz baixa, 40% de iluminação no ambiente (Sujeito a multa de 15% do valor acordado neste contrato).</span></li>
@@ -312,7 +321,7 @@
     <div data-role="header">
         <div data-role="navbar">
             <span>ASSINAR:</span>
-            <a data-click="closeModalViewLogin" data-role="button" data-align="right">Cancelar</a>
+            <a data-click="closeModalViewLogin" class="salvarbtn" data-role="button" data-align="right">Cancelar</a>
         </div>
     </div>
 
@@ -327,8 +336,8 @@
      
     <div data-role="footer">
         <div data-role="navbar">
-            <a data-click="openModalViewLogin" id="modalview-login-button" type="button" data-role="button" data-align="right">LIMPAR</a>
-            <a data-click="okModalViewLogin" id="modalview-login-button" type="button" data-role="button" data-align="right">OK</a>
+            <a data-click="openModalViewLogin" class="salvarbtn" id="modalview-login-button" type="button" data-role="button" data-align="right">LIMPAR</a>
+            <a data-click="okModalViewLogin" class="salvarbtn" id="modalview-login-button" type="button" data-role="button" data-align="right">OK</a>
         </div>
     </div>
 </div>
@@ -339,17 +348,17 @@
         
         
         
- <div data-role="modalview" id="modalview-savenomedoarquivo" style="width: 90%;" data-use-native-scrolling="true">
+ <div data-role="modalview" id="modalview-savenomedoarquivo" class="savenomedoarquivo" style="width: 90%;" data-use-native-scrolling="true">
     <div data-role="header">
         <div data-role="navbar">
-            <span>SALVAR ARQUIVO:</span>
+            <span style="font-size:14px;display:table;padding-left:20px;">SALVAR CONTRATO:</span>
             <a data-click="closeModalViewLogin2" data-role="button" data-align="right">Cancelar</a>
         </div>
     </div>
 
 
-      <div class='input-wrapper' style="height:220px; width:100%;">
-          <label>DÊ UM NOME AO ARQUIVO:
+      <div class='input-wrapper' style="height:160px; width:100%;">
+          <label style="padding:20px;">DÊ UM NOME AO CONTRATO:
                     <input class="nomedopdf" type="text" value="" />
           </label>  
      </div>
