Changes made by Mesmera Fernandes (mesmeracomunicacao@gmail.com).

--- a/Contrato Mesmera 2017/views/home.html
+++ b/Contrato Mesmera 2017/views/home.html
@@ -117,6 +117,7 @@ directoryReader.readEntries(readerSuccess,fail);
        
             
             function refreshlist() {
+        //Para Funcionar, no arquivo Kendo.mobile.min.js, procure por "refresh:function(e){ var n" e adicione a função em js que queira executar
         
          $('.pdflist li').remove();
         
